2023-01-29 Benedikt Freisen <b.freisen AT gmx.net>

	* device/include/float.h,
	  device/lib/_divsint.c,
	  device/lib/_divslong.c,
	  device/lib/_divslonglong.c,
	  device/lib/_divuint.c,
	  device/lib/_divulong.c,
	  device/lib/_divulonglong.c,
	  device/lib/_modsint.c,
	  device/lib/_modslong.c,
	  device/lib/_modslonglong.c,
	  device/lib/_moduint.c,
	  device/lib/_modulong.c,
	  device/lib/_modulonglong.c,
	  device/lib/_mulint.c,
	  device/lib/_mullong.c,
	  device/lib/_mullonglong.c,
	  device/lib/_rlslonglong.c,
	  device/lib/_rlulonglong.c,
	  device/lib/_rrslonglong.c,
	  device/lib/_rrulonglong.c,
	  device/lib/_slonglong2fs.c,
	  device/lib/_ulonglong2fs.c:
	  Add conditional `__nonbanked` to fix mcs51 library build.

2023-01-28 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCCerr.c,
	  src/SDCCerr.h,
	  src/ds390/gen.c,
	  src/mcs51/gen.c,
	  support/regression/tests/bug-3023.c:
	  Fix bug #3023.

2023-01-28 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCCast.c,
	  src/SDCCerr.c,
	  src/SDCCerr.h,
	  src/SDCCsymt.c,
	  src/port.h,
	  src/*/main.c:
	  Fix bug #3160.
	* src/mos6502/ralloc.c,
	  src/z80/ralloc.c:
	  Code cleanup.

2023-01-27 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCCicode.c,
	  support/regression/cases/Makefile.in,
	  support/regression/MakeList:
	  Fix bug #3394.
	* src/SDCCerr.h,
	  src/SDCCerr.c,
	  src/stm8/gen.c,
	  src/z80/gen.c,
	  support/valdiag/tests/bug-3228.c:
	  Fix bug #3228.
	* src/SDCCsymt.c,
	  .version,
	  doc/sdccman.lyx:
	  Fix bug #3263.

2023-01-27 Philipp Klaus Krause <philipp@colecovision.eu>

	* sdas/aspdk15/pdk15mch.c:
	  Fix bug #3191.
	* src/SDCCsymt.c:
	  Fix bug #3516.
	* src/SDCCopt.c,
	  support/regression/cases/Makefile.in:
	  Fix bug #3400.

2023-01-26 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCCval.c:
	  Make ulFromVal a wrapper for ullFromVal to remove duplicate code and partially fix bug #3539.
	* src/z80/gen.c: